# FastAPI_movie_theater

./: .flake8  .gitignore  Dockerfile  README.MD  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-tests.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 1bd978aeb627_initial_schema.py
cinema/: main.py
cinema/config/: dependencies.py  settings.py
cinema/database/: __init__.py  populate.py  session_postgresql.py  session_sqlite.py
cinema/database/models/: accounts.py  movies.py
cinema/database/seed_data/: test_data.csv
cinema/exceptions/: __init__.py
cinema/notifications/: __init__.py  emails.py
cinema/routes/: __init__.py  accounts.py  genres.py  profiles.py
cinema/routes/movies/: movies.py  movies_comments.py  movies_favourites.py  movies_ratings.py  movies_reactions.py
cinema/schemas/: __init__.py  accounts.py  movies.py  profiles.py
cinema/security/: token_manager.py
cinema/storages/: __init__.py  s3.py
cinema/tests/: conftest.py
cinema/tests/doubles/fakes/: storage.py
cinema/tests/test_e2e/: test_email_notification.py  test_storage.py
cinema/tests/test_integration/: test_accounts.py  test_movies.py  test_movies_comments.py  test_movies_favourites.py  test_movies_ratings.py  test_movies_reactions.py  test_profiles.py
cinema/validation/: __init__.py  profile.py
commands/: deploy.sh  run_migration.sh  run_web_server_prod.sh  setup_minio.sh
docker/mailhog/: Dockerfile
docker/minio_mc/: Dockerfile
docker/tests/: Dockerfile
(+1 files in other folders)
