[project]
name = "fastapi-movie-theater"
version = "0.1.0"
description = ""
authors = [
  { name = "Roman Kostiv", email = "rkostiv@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<3.14"


dependencies = [
  "fastapi==0.123.4",
  "uvicorn==0.38.0",

  "sqlalchemy==2.0.44",
  "alembic==1.17.2",
  "aiosqlite==0.21.0",

  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "python-dotenv==1.2.1",

  "httpx==0.28.1",

  "jinja2==3.1.6",
  "pillow==12.0.0",
  "beautifulsoup4==4.14.3",
  "validators==0.35.0",

  "python-jose==3.5.0",
  "passlib==1.7.4",
  "bcrypt (==4.3.0)",

  "aiosmtplib==5.0.0",
  "email-validator==2.3.0",

  "boto3==1.40.61",
  "aioboto3==15.5.0",
  "aiofiles==25.1.0",

  "pandas==2.3.3",
  "tqdm==4.67.1",
  "python-multipart (>=0.0.20,<0.0.21)",
  "greenlet (>=3.3.0,<4.0.0)",
  "asyncpg (>=0.31.0,<0.32.0)",
  "psycopg[binary] (>=3.3.2,<4.0.0)",
  "gunicorn (>=23.0.0,<24.0.0)"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "flake8==7.3.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-env (>=1.2.0,<2.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
